<resources>
    <string name="app_name">CEPnet</string>

    <string name="title_sectionProfile">Your Profile</string>
    <string name="title_sectionOtherProfile">User Profile</string>
    <string name="title_default">CEPnet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="signup_title">SIGN UP</string>
    <string name="notnew_title">Not new?</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="action_logout">Logout</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_unfriend_profile">Remove Friend</string>
    <string name="action_friend_profile">Add Friend</string>
    <string name="action_message_profile">Message Friend</string>
    <string name="action_refresh_messages">Refresh Messages</string>
    <string name="action_refresh_homepage">Refresh Homepage</string>

    <string name="error_title">Oops!</string>
    <string name="no_email">Please enter your email address.</string>
    <string name="no_username">Please enter your username.</string>
    <string name="no_password">Please enter your password.</string>
    <string name="password_doesnt_match">The passwords you entered do not match.</string>
    <string name="username_taken">The username you entered is already taken.</string>
    <string name="invalid_email">The email address you entered is invalid.</string>
    <string name="email_taken">The email you entered is already taken.</string>
    <string name="signup_failed">Signup Failed</string>

    <string name="logout_failed_title">Logout Failed</string>
    <string name="logout_failed">Logout was unsuccessful. Please try again.</string>

    <string name="ok">OK</string>
    <string name="login_title">Sign in</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_username_hint">Username</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_password_hint_2">Re-enter password</string>
    <string name="signup_email_hint">Email address</string>
    <string name="login">Login</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login Failed. Please check your username and password.</string>
    <string name="sign_up_button">New here?</string>
    <string name="login_button">Already have an account?</string>

    <string name="username_label">username</string>
    <string name="password_label">password</string>
    <string name="email_label">email</string>
    <string name="status_label">status</string>

    <string name="not_verified">Your email address is not yet verified. Please check your email and verify your email address.</string>
    <string name="not_verified_title">Reminder - Email Verification</string>
    <string name="signup_success_title">Success!</string>
    <string name="signup_success_1">Your CEPnet account has been successfully created. However, your email address needs to be verified before you can use all the features. An email will be sent to</string>
    <string name="signup_success_2">with instructions on how to verify your email address.</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dummy">Dummy Text</string>
    <string name="dummy1">The quick brown muzammil jumped over the lazy muzammil. HUehuehuheuhue 360noScope MLG360 get rekt scrubs. #420blazeit Sm0keweeEveryday.\n YOLO 420 swagnemite ayyy lmao</string>
    <string name="dummy_email">trisomy_21@spectrum.au</string>
    <string name="verified">Verified</string>
    <string name="unverified">Unverified</string>
    <string name="nav_entry_1">Home</string>
    <string name="nav_entry_2">Friends</string>
    <string name="nav_entry_3">Users</string>
    <string name="nav_entry_4">Classes</string>

    <string name="profile_title">User Profile</string>
    <string name="no_friend">You don\'t have any friends</string>
    <string name="find_friend">Find and add them (if you have any) by using the search feature.</string>
    <string name="added_friend_1">You have added</string>
    <string name="added_friend_2">as a friend.</string>
    <string name="removed_friend_1">You have removed</string>
    <string name="removed_friend_2">from your friends list.</string>
    <string name="no_status">Hi!</string>
    <string name="status_hint">Express yourself.</string>
    <string name="save_changes">Save Changes</string>
    <string name="saved_profile_changes">The changes to your profile have been saved.</string>
    <string name="not_saved_profile_changes">Your changes could not be saved. Please check the fields and try again.</string>
    <string name="edit_profile_title">Edit Your Profile</string>
    <string name="edit_profile_picture">CHANGE</string>
    <string name="missing_picture_file">Error. Unable to find picture.</string>
    <string name="profile_picture_changed">Your profile picture has been changed.</string>
    <string name="no_users_1">No Users</string>
    <string name="no_users_2">Either that, or you\'ve added all of them to your friends list.</string>
    <string name="no_messages_1">No Messages</string>
    <string name="no_messages_2">Neither of you have sent any messages.</string>
    <string name="no_conversation_1">No Messages</string>
    <string name="no_conversation_2">You have neither received nor sent any messages to your friends.</string>
    <string name="message_hint">Enter your message</string>
    <string name="send_message">Send Message</string>
    <string name="notification_label">notifications</string>
    <string name="messages_label">recent messages</string>

    <string name="notif_addfriend">has added you as a friend.</string>
    <string name="notif_status_changed">has updated his/her status:</string>
    <string name="notif_picture_changed">has updated his/her profile picture.</string>
    <string name="notif_name_changed">has changed his/her username to</string>

</resources>
