<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin_custom"
    android:paddingRight="@dimen/activity_horizontal_margin_custom"
    android:layout_marginLeft="@dimen/padding_medium"
    android:layout_marginRight="@dimen/padding_medium"
    android:paddingTop="@dimen/activity_vertical_margin_custom"
    android:paddingBottom="@dimen/activity_vertical_margin_custom"
    android:orientation="vertical"
    tools:context="vintgug.cepnet.SignupActivity">

    <TextView
        style="@style/signup_title"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        android:id="@+id/SignupButton"/>

    <EditText
        style="@style/login_textbox"
        android:inputType="text"
        android:hint="@string/signup_username_hint"
        android:id="@+id/UsernameEditText"/>

    <EditText
        style="@style/login_textbox"
        android:inputType="textPassword"
        android:hint="@string/signup_password_hint"
        android:id="@+id/PasswordEditText"/>

    <EditText
        style="@style/login_textbox"
        android:inputType="textPassword"
        android:hint="@string/signup_password_hint_2"
        android:id="@+id/PasswordEditText2"/>

    <EditText
        style="@style/login_textbox"
        android:inputType="textEmailAddress"
        android:hint="@string/signup_email_hint"
        android:id="@+id/EmailEditText"/>

    <ProgressBar
        style="@android:style/Widget.ProgressBar.Inverse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_mid"
        android:layout_marginTop="@dimen/padding_extra_big"
        android:indeterminate="true"
        android:indeterminateDuration="1000"
        android:indeterminateOnly="true"
        android:visibility="gone"
        android:id="@+id/SignupProgress"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom"
        android:padding="@dimen/padding_small"
        android:clickable="true"
        android:text="@string/login_button"
        android:textSize="@dimen/text_mid_small"
        android:id="@+id/LoginButton"/>

</LinearLayout>