<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_extra_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/padding_extra_small">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:textSize="@dimen/text_large"
            android:textColor="@color/title_text_color"
            android:text="@string/edit_profile_title"
            android:padding="@dimen/padding_extra_extra_small"/>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center">

            <ImageButton
                android:layout_width="@dimen/picture_extra_small"
                android:layout_height="@dimen/picture_extra_small"
                android:contentDescription="@string/save_changes"
                android:src="@drawable/check"
                android:scaleType="centerInside"
                android:tint="@color/button_color"
                android:background="#00000000"
                android:layout_gravity="center"
                android:id="@+id/saveProfileEdit"/>

            <ProgressBar
                style="@android:style/Widget.ProgressBar.Inverse"
                android:layout_gravity="center"
                android:layout_width="@dimen/picture_extra_small"
                android:layout_height="@dimen/picture_extra_small"
                android:indeterminate="true"
                android:indeterminateDuration="1000"
                android:indeterminateOnly="true"
                android:visibility="visible"
                android:id="@+id/loadProgress"
                />

        </FrameLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/usernameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_mid_large"
        android:inputType="textNoSuggestions"
        android:hint="@string/username_hint"
        android:singleLine="true"
        android:maxLength="20"
        android:layout_margin="@dimen/padding_extra_small"/>

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/text_mid_large"
        android:hint="@string/email_hint"
        android:singleLine="true"
        android:maxLength="50"
        android:layout_margin="@dimen/padding_extra_small"/>
    <EditText
        android:id="@+id/statusEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_mid_large"
        android:inputType="textMultiLine"
        android:hint="@string/status_hint"
        android:singleLine="false"
        android:gravity="start"
        android:lines="10"
        android:maxLines="10"
        android:maxLength="500"
        android:layout_margin="@dimen/padding_extra_small"/>

</LinearLayout>