<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="vintgug.cepnet.MessageFragment"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stackFromBottom="true"
            android:animateLayoutChanges="true"
            android:id="@+id/messageList"/>
        <ProgressBar
            style="@android:style/Widget.ProgressBar.Inverse"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/progress_mid"
            android:indeterminate="true"
            android:indeterminateDuration="1000"
            android:indeterminateOnly="true"
            android:visibility="visible"
            android:id="@+id/loadProgress"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/padding_small"
            android:layout_marginRight="@dimen/padding_small"
            android:id="@+id/noMessagesLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_extra_extra_large"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/no_messages_1"
                android:textColor="@color/title_text_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/no_messages_2"/>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_extra_extra_small"
        android:paddingRight="@dimen/padding_extra_extra_small"
        android:background="@color/new_msg_background">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8.5"
            android:background="@color/new_msg_text_background"
            android:isScrollContainer="true"
            android:scrollbars="vertical"
            android:hint="@string/message_hint"
            android:textColor="@color/new_msg_text"
            android:textColorHint="@color/new_msg_hint"
            android:maxLength="500"
            android:maxLines="8"
            android:singleLine="false"
            android:layout_margin="@dimen/padding_extra_small"
            android:padding="@dimen/padding_extra_small"
            android:textSize="@dimen/text_mid_large_2"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:id="@+id/newMessageText"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:src="@drawable/send"
            android:contentDescription="@string/send_message"
            android:padding="@dimen/padding_small"
            android:background="#00000000"
            android:layout_marginLeft="@dimen/padding_extra_extra_small_neg"
            android:layout_marginStart="@dimen/padding_extra_extra_small_neg"
            android:tint="@color/new_msg_button"
            android:id="@+id/newMessageSend"
            android:scaleType="centerInside"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

</LinearLayout>
