<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/nav_drawer_background"
    tools:context="vintgug.cepnet.NavigationDrawerFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nav_profile_background"
        android:id="@+id/navProfile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/padding_extra_extra_small"
            android:layout_marginLeft="@dimen/padding_extra_small"
            android:layout_marginRight="@dimen/padding_extra_small">

            <ImageView
                android:layout_width="@dimen/picture_small"
                android:layout_height="@dimen/picture_small"
                android:layout_margin="@dimen/padding_extra_small"
                android:src="@drawable/user"
                android:scaleType="centerInside"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/navProfileName"
                    android:gravity="start"
                    android:text="@string/dummy"
                    android:textColor="@color/nav_profile_text"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:textSize="@dimen/text_mid_large"
                    android:padding="@dimen/padding_extra_small"
                    android:layout_marginBottom="@dimen/padding_small_neg"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:id="@+id/navProfileEmail"
                    android:text="@string/dummy"
                    android:textColor="@color/nav_profile_text"
                    android:textSize="@dimen/text_mid_small"
                    android:padding="@dimen/padding_extra_small"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/navEntry1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="false"
            android:layout_margin="@dimen/padding_extra_small">

            <ImageView
                style="@style/nav_entry_icon"
                android:src="@drawable/home"
                android:id="@+id/navIcon1"/>

            <TextView
                style="@style/nav_entry"
                android:gravity="start"
                android:text="@string/nav_entry_1"
                android:id="@+id/navText1"
                />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="@dimen/padding_extra_extra_small"
        android:id="@+id/navEntry2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="false"
            android:layout_margin="@dimen/padding_extra_small">

            <ImageView
                style="@style/nav_entry_icon"
                android:src="@drawable/group"
                android:id="@+id/navIcon2"/>

            <TextView
                style="@style/nav_entry"
                android:gravity="start"
                android:text="@string/nav_entry_2"
                android:id="@+id/navText2"
                />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="@dimen/padding_extra_extra_small"
        android:id="@+id/navEntry3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="false"
            android:layout_margin="@dimen/padding_extra_small">

            <ImageView
                style="@style/nav_entry_icon"
                android:src="@drawable/homework"
                android:id="@+id/navIcon3"/>

            <TextView
                style="@style/nav_entry"
                android:gravity="start"
                android:id="@+id/navText3"
                android:text="@string/nav_entry_3"
                />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="@dimen/padding_extra_extra_small"
        android:id="@+id/navEntry4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="false"
            android:layout_margin="@dimen/padding_extra_small">

            <ImageView
                style="@style/nav_entry_icon"
                android:src="@drawable/teacher"
                android:id="@+id/navIcon4"/>

            <TextView
                style="@style/nav_entry"
                android:gravity="start"
                android:id="@+id/navText4"
                android:text="@string/nav_entry_4"
                />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>


